--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,6 @@
-appdirs==1.4.0
-certifi==2017.1.23
-cffi==1.9.1
-cryptography==1.7.2
-defusedxml==0.4.1
-eight==0.3.3
-idna==2.2
-lxml==3.6.4
-packaging==16.8
-pyOpenSSL==16.2.0
-pyasn1==0.2.2
-pycparser==2.17
-pycrypto==2.6.1
-pyparsing==2.1.10
-requests==2.13.0
-signxml==2.2.3
-six==1.10.0
+lxml==4.6
+requests==2.27.1
+signxml==2.10.1
+cryptography==40.0.2
+pyOpenSSL==23.2.0
+pycryptodome==3.4.3
